--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,46 +6,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".Forgot_Passsword">
+    android:background="@drawable/home"
+    tools:context=".Home">
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Pasword"
+        android:text="Welcome to Home"
         android:textColor="#455BAE"
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="70dp"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="New Password"
-        android:layout_marginTop="30dp"
+        android:hint="Name"
+        android:layout_marginTop="180dp"
+        android:textColor="@color/white"
         />
-
-    <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="Confirm Password"
-        android:layout_marginTop="30dp"
-        />
-
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnShare"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="Send To"
+        android:background="#0FECD7"
+        android:textColor="@color/white"
+        android:textSize="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Reset passwor"
-        android:background="#FF6200EE"
-        android:layout_marginTop="30dp"/>
-
+        android:layout_height="80dp"/>
 
 
 
