--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@drawable/daftar"
     tools:context=".Register_Activity">
 
     <TextView
@@ -22,45 +23,80 @@
         android:textSize="30dp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textViewUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="130dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
+
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Name" />
+        android:hint="Enter Your Name" />
+
+    <TextView
+        android:id="@+id/textViewEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="240dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextTextPersonName"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:hint="Email"/>
+        android:hint="Enter Your Email"/>
+
+    <TextView
+        android:id="@+id/textViewPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="350dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextTextEmailAddress"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="Password"/>
+        android:hint="Enter your Password"/>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextTextPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="REGISTER"
-        android:background="#FF6200EE"/>
+        android:background="#0FECD7"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -70,19 +106,20 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="90dp"
         android:text="Have an acount?"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
 
     <TextView
-        android:id="@+id/textLogin"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginTop="20dp"
-        android:layout_toEndOf="@+id/textView2"
-        android:layout_toRightOf="@+id/textView2"
         android:text="Login"
         android:textSize="20dp"
-        android:textColor="#FF6200EE"/>
-
+        android:textColor="#FF6200EE"
+        android:textStyle="bold"
+        />
 </RelativeLayout>
